# CTX-Audit

./: .dockerignore  .env.example  .env.web  .gitignore  AGENT_ARCHITECTURE_DESIGN.md  ARCHITECTURE.md  CORE_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
agent-service/: .env.example  Dockerfile  requirements.txt
agent-service/app/: __init__.py  config.py  main.py
agent-service/app/agents/: __init__.py  analysis.py  base.py  orchestrator.py  recon.py
agent-service/app/api/: audit.py  health.py  llm.py  prompts.py  settings.py
agent-service/app/core/: __init__.py  llm.py  rag.py  state.py
agent-service/app/services/: database.py  event_bus_v2.py  event_persistence.py  queue.py  rust_client.py  vector_store.py
agent-service/prompts/: analysis.yaml  orchestrator.yaml  recon.yaml
core/: Cargo.toml  lib.rs
core/src/: lib.rs
core/src/ast/: cache.rs  engine.rs  mod.rs
core/src/rules/: model.rs  scanner.rs
core/src/scanner/: mod.rs  regex_scanner.rs
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docs/: LLM_AGENT_ENHANCEMENT_PLAN.md
python-sidecar/: agent.py  ast_engine.py  llm_engine.py  requirements.txt
rules/: ast_rules.yaml  code-injection.yaml  command-injection.yaml  csrf-detection.yaml  debug-info-leak.yaml  insecure-cookie.yaml  insecure-random.yaml  ldap-injection.yaml  log-injection.yaml  no_hardcoded_passwords.yaml  path-traversal.yaml  sensitive-info-leak.yaml  sensitive-log-data.yaml  unsafe-deserialization.yaml  unsafe-http-methods.yaml  unsafe-redirect.yaml  weak-encryption.yaml  xxe-detection.yaml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  scanner.rs
src-tauri/src/ast/: engine.rs  mod.rs  parser.rs  query.rs  symbol.rs
src-tauri/src/diff/: engine.rs  git_integration.rs  types.rs
src-tauri/src/mcp/: mod.rs  service.rs
src-tauri/src/rules/: loader.rs  mod.rs  scanner.rs
src-tauri/src/scanners/: manager.rs  mod.rs  regex_scanner.rs
src/components/: ErrorBoundary.tsx
src/components/audit/: AgentAuditPanel.tsx  AgentTreeVisualization.tsx
src/components/file-explorer/: FileTree.tsx
src/components/log/: LogPanel.tsx
src/components/search/: SearchPanel.tsx
src/components/ui/: dropdown-menu.tsx  resizable.tsx  tabs.tsx  toast.tsx  toaster.tsx
src/hooks/: use-toast.ts
src/lib/: graphLayout.ts  performance.ts
src/pages/: Dashboard.tsx
src/pages/AgentAudit/: index.tsx
src/pages/project/: AnalysisPanel.tsx  EditorPanel.tsx  GraphPanel.tsx  ProjectLayout.tsx  ProjectView.tsx  ScanPanel.tsx
src/stores/: agentStore.ts  fileStore.ts  projectStore.ts  ruleStore.ts  scanStore.ts  toastStore.ts  uiStore.ts
web-backend/: Cargo.toml  Dockerfile  Dockerfile.dev
web-backend/src/: main.rs  state.rs
web-backend/src/api/: ast.rs  files.rs  mod.rs  project.rs  rules.rs  scanner.rs
(+16 files in other folders)
